fixing the most important bugs in the most important classes found by FindBugs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@771 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c